--- a/SDKBeintoo_Beta/Res/xib/BeintooSigninAlreadyVC.xib
+++ b/SDKBeintoo_Beta/Res/xib/BeintooSigninAlreadyVC.xib
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="7.10">
 	<data>
-		<int key="IBDocument.SystemTarget">1296</int>
+		<int key="IBDocument.SystemTarget">1536</int>
 		<string key="IBDocument.SystemVersion">11E53</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2840</string>
 		<string key="IBDocument.AppKitVersion">1138.47</string>
 		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1181</string>
+			<string key="NS.object.0">1926</string>
 		</object>
 		<object class="NSArray" key="IBDocument.IntegratedClassDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
 			<string>IBProxyObject</string>
+			<string>IBUIButton</string>
 			<string>IBUIImageView</string>
 			<string>IBUILabel</string>
-			<string>IBUIButton</string>
-			<string>IBUITextField</string>
 			<string>IBUIScrollView</string>
+			<string>IBUITextField</string>
 			<string>IBUIView</string>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
@@ -40,11 +40,10 @@
 			</object>
 			<object class="IBUIScrollView" id="372422493">
 				<reference key="NSNextResponder"/>
-				<int key="NSvFlags">268</int>
+				<int key="NSvFlags">256</int>
 				<string key="NSFrame">{{0, 44}, {320, 436}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView"/>
 				<bool key="IBUIClipsSubviews">YES</bool>
 				<bool key="IBUIMultipleTouchEnabled">YES</bool>
 				<object class="IBUISimulatedNavigationBarMetrics" key="IBUISimulatedTopBarMetrics">
@@ -54,7 +53,7 @@
 			</object>
 			<object class="IBUIView" id="937376213">
 				<reference key="NSNextResponder"/>
-				<int key="NSvFlags">256</int>
+				<int key="NSvFlags">290</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<object class="IBUIImageView" id="923589297">
@@ -79,7 +78,7 @@
 					<object class="IBUILabel" id="488538348">
 						<reference key="NSNextResponder" ref="937376213"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{200, 5}, {270, 60}}</string>
+						<string key="NSFrame">{{288, 5}, {270, 60}}</string>
 						<reference key="NSSuperview" ref="937376213"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="657337432"/>
@@ -93,6 +92,7 @@
 						<object class="NSColor" key="IBUITextColor" id="225184387">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MCAwIDAAA</bytes>
+							<string key="IBUIColorCocoaTouchKeyPath">darkTextColor</string>
 						</object>
 						<nil key="IBUIHighlightedColor"/>
 						<object class="NSColor" key="IBUIShadowColor" id="341000449">
@@ -112,11 +112,12 @@
 							<double key="NSSize">16</double>
 							<int key="NSfFlags">16</int>
 						</object>
+						<double key="preferredMaxLayoutWidth">270</double>
 					</object>
 					<object class="IBUITextField" id="465994824">
 						<reference key="NSNextResponder" ref="937376213"/>
-						<int key="NSvFlags">293</int>
-						<string key="NSFrame">{{200, 138}, {270, 31}}</string>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{288, 138}, {270, 31}}</string>
 						<reference key="NSSuperview" ref="937376213"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="659720478"/>
@@ -161,8 +162,8 @@
 					</object>
 					<object class="IBUITextField" id="657337432">
 						<reference key="NSNextResponder" ref="937376213"/>
-						<int key="NSvFlags">293</int>
-						<string key="NSFrame">{{200, 79}, {270, 31}}</string>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{288, 79}, {270, 31}}</string>
 						<reference key="NSSuperview" ref="937376213"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="465994824"/>
@@ -196,8 +197,8 @@
 					</object>
 					<object class="IBUIButton" id="659720478">
 						<reference key="NSNextResponder" ref="937376213"/>
-						<int key="NSvFlags">293</int>
-						<string key="NSFrame">{{200, 195}, {270, 44}}</string>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{288, 195}, {270, 44}}</string>
 						<reference key="NSSuperview" ref="937376213"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="668133923"/>
@@ -231,10 +232,9 @@
 					<object class="IBUIButton" id="668133923">
 						<reference key="NSNextResponder" ref="937376213"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{200, 244}, {270, 40}}</string>
+						<string key="NSFrame">{{288, 244}, {270, 40}}</string>
 						<reference key="NSSuperview" ref="937376213"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -254,7 +254,7 @@
 						<reference key="IBUIFont" ref="586782515"/>
 					</object>
 				</object>
-				<string key="NSFrameSize">{480, 320}</string>
+				<string key="NSFrameSize">{568, 320}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="923589297"/>
@@ -264,11 +264,30 @@
 					<int key="IBUIInterfaceOrientation">3</int>
 					<int key="interfaceOrientation">3</int>
 				</object>
+				<object class="IBUIScreenMetrics" key="IBUISimulatedDestinationMetrics">
+					<string key="IBUISimulatedSizeMetricsClass">IBUIScreenMetrics</string>
+					<object class="NSMutableDictionary" key="IBUINormalizedOrientationToSizeMap">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<integer value="1"/>
+							<integer value="3"/>
+						</object>
+						<object class="NSArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>{320, 568}</string>
+							<string>{568, 320}</string>
+						</object>
+					</object>
+					<string key="IBUITargetRuntime">IBCocoaTouchFramework</string>
+					<string key="IBUIDisplayName">Retina 4 Full Screen</string>
+					<int key="IBUIType">2</int>
+				</object>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="1030936037">
 				<reference key="NSNextResponder"/>
-				<int key="NSvFlags">256</int>
+				<int key="NSvFlags">272</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<object class="IBUIImageView" id="233085068">
@@ -310,6 +329,7 @@
 						<int key="IBUINumberOfLines">0</int>
 						<reference key="IBUIFontDescription" ref="505485266"/>
 						<reference key="IBUIFont" ref="317420785"/>
+						<double key="preferredMaxLayoutWidth">300</double>
 					</object>
 					<object class="IBUITextField" id="738386574">
 						<reference key="NSNextResponder" ref="1030936037"/>
@@ -409,7 +429,6 @@
 						<string key="NSFrame">{{10, 392}, {300, 37}}</string>
 						<reference key="NSSuperview" ref="1030936037"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -465,6 +484,7 @@
 						<int key="IBUINumberOfLines">2</int>
 						<reference key="IBUIFontDescription" ref="686137998"/>
 						<reference key="IBUIFont" ref="586782515"/>
+						<double key="preferredMaxLayoutWidth">258</double>
 					</object>
 					<object class="IBUIButton" id="626847440">
 						<reference key="NSNextResponder" ref="920672738"/>
@@ -472,7 +492,6 @@
 						<string key="NSFrame">{{10, 114}, {280, 40}}</string>
 						<reference key="NSSuperview" ref="920672738"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -1266,7 +1285,7 @@
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
-			<real value="1296" key="NS.object.0"/>
+			<real value="1536" key="NS.object.0"/>
 		</object>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDevelopmentDependencies">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.InterfaceBuilder3</string>
@@ -1289,6 +1308,6 @@
 				<string>{249, 201}</string>
 			</object>
 		</object>
-		<string key="IBCocoaTouchPluginVersion">1181</string>
+		<string key="IBCocoaTouchPluginVersion">1926</string>
 	</data>
 </archive>
