--- a/SDKBeintoo_Beta/Res/xib/BeintooVC.xib
+++ b/SDKBeintoo_Beta/Res/xib/BeintooVC.xib
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1296</int>
+		<int key="IBDocument.SystemTarget">1536</int>
 		<string key="IBDocument.SystemVersion">11E53</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2840</string>
 		<string key="IBDocument.AppKitVersion">1138.47</string>
 		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1181</string>
+			<string key="NS.object.0">1926</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
+			<string>IBProxyObject</string>
+			<string>IBUILabel</string>
 			<string>IBUITableView</string>
 			<string>IBUIToolbar</string>
 			<string>IBUIView</string>
-			<string>IBUILabel</string>
-			<string>IBProxyObject</string>
 		</array>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -100,7 +100,7 @@
 						<string key="NSFrame">{{0, 33}, {320, 359}}</string>
 						<reference key="NSSuperview" ref="466185912"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSNextKeyView" ref="69137402"/>
 						<reference key="IBUIBackgroundColor" ref="352587011"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -139,7 +139,7 @@
 			</object>
 			<object class="IBUIView" id="550088050">
 				<reference key="NSNextResponder"/>
-				<int key="NSvFlags">256</int>
+				<int key="NSvFlags">290</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIView" id="972464996">
 						<reference key="NSNextResponder" ref="550088050"/>
@@ -195,8 +195,8 @@
 					</object>
 					<object class="IBUILabel" id="822522397">
 						<reference key="NSNextResponder" ref="550088050"/>
-						<int key="NSvFlags">256</int>
-						<string key="NSFrame">{{70, 7}, {200, 20}}</string>
+						<int key="NSvFlags">290</int>
+						<string key="NSFrame">{{70, 7}, {360, 20}}</string>
 						<reference key="NSSuperview" ref="550088050"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="691330311"/>
@@ -209,6 +209,7 @@
 						<object class="NSColor" key="IBUITextColor" id="311090544">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MCAwIDAAA</bytes>
+							<string key="IBUIColorCocoaTouchKeyPath">darkTextColor</string>
 						</object>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">1</int>
@@ -249,7 +250,7 @@
 								<reference key="IBUIFont" ref="514200439"/>
 							</object>
 						</array>
-						<string key="NSFrame">{{275, 6}, {33, 22}}</string>
+						<string key="NSFrame">{{435, 6}, {33, 22}}</string>
 						<reference key="NSSuperview" ref="550088050"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="501490344"/>
@@ -261,7 +262,7 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{320, 32}</string>
+				<string key="NSFrameSize">{480, 32}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="972464996"/>
@@ -273,7 +274,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="996984236">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">256</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIView" id="56944955">
@@ -285,7 +286,6 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrame">{{0, 1}, {32, 32}}</string>
 								<reference key="NSSuperview" ref="56944955"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="809008839"/>
 								<reference key="IBUIBackgroundColor" ref="905265589"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -314,7 +314,6 @@
 						</array>
 						<string key="NSFrame">{{10, 7}, {32, 32}}</string>
 						<reference key="NSSuperview" ref="996984236"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="600170371"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -328,7 +327,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{70, 9}, {200, 27}}</string>
 						<reference key="NSSuperview" ref="996984236"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="541145032"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -352,7 +350,6 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrame">{{0, 1}, {32, 32}}</string>
 								<reference key="NSSuperview" ref="541145032"/>
-								<reference key="NSWindow"/>
 								<reference key="IBUIBackgroundColor" ref="905265589"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -380,7 +377,6 @@
 						</array>
 						<string key="NSFrame">{{280, 7}, {32, 32}}</string>
 						<reference key="NSSuperview" ref="996984236"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="882828738"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -391,8 +387,6 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 44}</string>
-				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="56944955"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -744,20 +738,17 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">BeintooVC</string>
 					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="close">id</string>
-						<string key="tryBeintoo">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="close">
-							<string key="name">close</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="tryBeintoo">
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">tryBeintoo</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">tryBeintoo</string>
+						<object class="IBActionInfo" key="NS.object.0">
 							<string key="name">tryBeintoo</string>
 							<string key="candidateClassName">id</string>
 						</object>
-					</dictionary>
+					</object>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="bedollars">UILabel</string>
 						<string key="homeTable">BTableView</string>
@@ -858,10 +849,10 @@
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
-			<real value="1296" key="NS.object.0"/>
+			<real value="1536" key="NS.object.0"/>
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
-		<string key="IBCocoaTouchPluginVersion">1181</string>
+		<string key="IBCocoaTouchPluginVersion">1926</string>
 	</data>
 </archive>
